tests/sawn/fixtures/invalid/39_anonymous_root_object.sawn
// §4: anonymous {} at root level is a parse error
{}
  name="test"
